force-app/main/default/objects/Training_Task_File_Detail__c/Training_Task_File_Detail__c.object-meta.xml
<CustomObject>
    <label>Training Task File Detail</label>
    <nameField>
        <displayFormat>TTFD-{000000}</displayFormat>
        <label>Training Task File Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Task File Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>