force-app/main/default/objects/Training_Task_File_Detail__c/fields/Content_Document_Url__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Url__c</fullName>
    <label>Content Document Url</label>
    <type>Url</type>
</CustomField>