force-app/main/default/objects/Training_Task_File_Detail__c/fields/See_Time__c.field-meta.xml
<CustomField>
    <fullName>See_Time__c</fullName>
    <label>See Time</label>
    <type>DateTime</type>
</CustomField>