force-app/main/default/objects/Training_Task_File_Detail__c/fields/Training_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Training_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Personnel</label>
    <referenceTo>Training_Personnel__c</referenceTo>
    <relationshipLabel>Training Task File Details</relationshipLabel>
    <relationshipName>Training_Task_File_Details</relationshipName>
    <type>Lookup</type>
</CustomField>